<resources>
    <string name="app_name">物通CRM</string>

    <string name="write_journal">写日志</string>
    <string name="send_approval">发审批</string>
    <string name="send_notice">发公告</string>
    <string name="write_customer">录入客户</string>
    <string name="order_metting">预约会议室</string>
    <string name="product_advice">产品建议</string>

    <string name="write_daysum">写日总结</string>
    <string name="write_dayplan">写日计划</string>
    <string name="write_weeksum">写周总结</string>
    <string name="write_weekplan">写周计划</string>

    <string name="work_sort">工作事项等级</string>
    <string name="work_content">工作事项或内容</string>
    <string name="execute_person">执行人员:</string>
    <string name="work_persent">此工作所占比重</string>
    <string name="complete_time">完成时间</string>
    <string name="remark">备注</string>
    <string name="complete_condition">完成情况</string>
    <string name="submit">立即提交</string>

    <string name="hint_dayplan_percent">所占比重:</string>
    <string name="hint_dayplan_content">工作内容:</string>
    <string name="hint_daysum_wcqk">完成情况:</string>
    <string name="hint_daysum_xxfx">学习反省:</string>
    <string name="hint_weekplan_mb">计划目标:</string>


    <string name="add_work">再添加一项</string>

    <string name="myjournal">我的日志</string>
    <string name="bmygrz">部门员工日志</string>

    <string name="complete_details">完成详情</string>
    <string name="nocomplete_reason">未完成原因</string>
    <string name="nocompelete_time">下次完成时间</string>


    <string name="analysis">预测到单客户情况分析</string>
    <string name="genjin">重点意向客户跟进情况</string>

    <string name="Customer_name">客户名称:</string>
    <string name="fengxi_genjin">分析跟进:</string>
    <string name="deal_percent">成交百分比:</string>
    <string name="hint_sort">请选择工作事件等级</string>
    <string name="hint__name">请输入客户名称</string>
    <string name="hint_genjin">请输入情况分析/跟进方案</string>
    <string name="hint_percent">请输入成交百分比</string>
    <string name="if_get">是否踩中:</string>
    <string name="hint_if">请选择是否踩中</string>
    <string name="reson_fx">原因分析:</string>
    <string name="hint_reson">请输入原因分析</string>
    <string name="gjfa">跟进方案:</string>
    <string name="hint_gjfa">请输入跟进方案</string>
    <string name="hint_cttype">请输入客户类型</string>
    <string name="hint_pdtype">请输入产品类型</string>
    <string name="hint_backmoney">请输入回款金额</string>

    <string name="Major_save">完成保存</string>

    <!--xs_daysum_foot-->
    <string name="work_load">今日工作量</string>
    <string name="money_qk">今日回款到单情况</string>
    <string name="single_analysis">预测到单客户踩中/踩中分析</string>
    <string name="add_customer">新增意向客户情况</string>

    <!--今日工作量-->
    <string name="phone_number">有效电话:</string>
    <string name="phone_number1">有效电话</string>
    <string name="sm_count">有效上门:</string>
    <string name="sm_count1">有效上门</string>
    <string name="A_customer">A类客户库存:</string>
    <string name="A_customer1">A类客户库存</string>
    <string name="B_customer">B类客户库存:</string>
    <string name="B_customer1">B类客户库存</string>
    <string name="add_A">新增A类客户:</string>
    <string name="add_A1">新增A类客户</string>
    <string name="add_B">新增B类客户:</string>
    <string name="add_B1">新增B类客户</string>
    <string name="krl">库容量:</string>
    <string name="krl1">库容量</string>
    <string name="hint_number">请输入有效电话数量</string>
    <string name="hint_sm">请输入有效上门数量</string>
    <string name="hint_A">请输入A类客户库存</string>
    <string name="hint_B">请输入B类客户库存</string>
    <string name="hint_add_A">请输入新增A类客户</string>
    <string name="hint_add_B">请输入新增B类客户</string>
    <string name="hint_krl">请输入库容量</string>
    <string name="Customer_type">客户类型:</string>
    <string name="Product_type">产品类型:</string>
    <string name="Getmoney">回款金额:</string>

    <!--我的-->
    <string name="myphone_number">联系方式</string>
    <string name="my_department">所在部门</string>
    <string name="my_job">现任职位</string>
    <string name="my_card">我的名片</string>
    <string name="my_attendance">我的考勤</string>


    <!--食品录入客户-->
    <string name="member_sort">会员类型</string>
    <string name="company_profile">公司简介:</string>
    <string name="company_address">公司地址:</string>
    <string name="detail_address">详细地址:</string>
    <string name="company_sort">公司类型:</string>
    <string name="major_product">主营产品类型:</string>
    <string name="customer_job">客户职位:</string>
    <string name="line_phone">固定电话:</string>
    <string name="e_mail">电子邮箱:</string>
    <string name="QQ">QQ:</string>
    <string name="message">传真:</string>

    <string name="member_name">请输入会员名称</string>
    <string name="company_name">请输入公司名称</string>
    <string name="telephone">请输入手机号码</string>
    <string name="customer_name">请输入客户姓名</string>
    <string name="hint_profile">请输入公司简介</string>
    <string name="hint_address">请输入详细地址</string>
    <string name="hint_jog">请输入客户职位</string>
    <string name="hint_linenumber">请输入固定电话</string>
    <string name="hint_emil">请输入电子邮箱</string>
    <string name="hint_qq">请输入QQ号</string>
    <string name="hint_message">请输入传真号</string>


    <string name="select_province">选择省份</string>
    <string name="select_city">选择市</string>
    <string name="select_town">选择县/区</string>


    <string name="help">帮助</string>
    <string name="string_help_text">\"当前应用缺少必要权限。请点击\\\"设置\\\"-\\\"权限\\\"-打开所需权限。\"</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="Unrealized">物通的开发人员正在努力开发中...</string>
</resources>
