<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginBottom="1dp">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Customer_name" />

        <EditText
            android:id="@+id/et_get_backmoney_name"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint__name"
            android:paddingLeft="10dp" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_xrz_delete"
            android:visibility="invisible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginBottom="1dp">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Customer_type" />

        <EditText
            android:id="@+id/et_Customer_type"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_cttype"
            android:paddingLeft="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginBottom="1dp">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Product_type" />

        <EditText
            android:id="@+id/et_product_type"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_pdtype"
            android:paddingLeft="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Getmoney" />

        <EditText
            android:id="@+id/et_backmoney"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_backmoney"
            android:digits="1234567890."
            android:inputType="number"
            android:paddingLeft="10dp" />


    </LinearLayout>

</LinearLayout>