<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/rl_single_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/iv_dayplan_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="事项等级:"
            style="@style/ContentText"/>
        <TextView
            android:id="@+id/tv_get_single_sort"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_dayplan_sort"
            android:hint="@string/hint_sort"
            android:paddingLeft="10dp"
            />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_xrz_delete"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/Customer_name"
            style="@style/ContentText"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/et_get_single_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint__name"
            android:paddingLeft="10dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_if_get"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/if_get"
            style="@style/ContentText"/>

        <TextView
            style="@style/ContentText"
            android:id="@+id/tv_if_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_dayplan_sort"
            android:hint="@string/hint_if"
            android:paddingLeft="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/reson_fx"
            style="@style/ContentText"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/et_single_analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint_reson"
            android:paddingLeft="10dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/gjfa"
            style="@style/ContentText"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/et_single_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint_gjfa"
            android:paddingLeft="10dp"
            />


    </LinearLayout>

</LinearLayout>