<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.wtcrmandroid.activity.journalmanager.TodayWorkLoadActivity">

    <com.wtcrmandroid.custompricing.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height">
    </com.wtcrmandroid.custompricing.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"/>

            <EditText
                android:id="@+id/et_phone_number"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_count"/>

                <EditText
                    android:id="@+id/et_sm_count"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_sm"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A_customer"/>

                <EditText
                    android:id="@+id/et_A_customer"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_A"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B_customer"/>

                <EditText
                    android:id="@+id/et_B_customer"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_B"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_A"/>

                <EditText
                    android:id="@+id/et_add_A"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_add_A"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_B"/>

                <EditText
                    android:id="@+id/et_add_B"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_add_B"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/ContentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/krl"/>

                <EditText
                    android:id="@+id/et_krl"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_krl"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tv_major_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/Major_save"
        android:textColor="#ffffff"/>

</RelativeLayout>
