<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rl_major_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/iv_dayplan_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="事项等级:"
            style="@style/ContentText"/>

        <TextView
            android:id="@+id/tv_major_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_dayplan_sort"
            android:hint="@string/hint_sort"
            android:paddingLeft="10dp"
            />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_xrz_delete"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/Customer_name"
            style="@style/ContentText"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/et_major_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint__name"
            android:paddingLeft="10dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/fengxi_genjin"
            style="@style/ContentText"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/et_major_analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint_genjin"
            android:paddingLeft="10dp"
            />


    </LinearLayout>

</LinearLayout>